--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -59,14 +59,14 @@
 	\vspace{0.5cm}
 	\noindent \textbf{Dados do Local de Estágio} \\
 	Empresa: \underline{Secretaria de Estado do Turismo\hspace{0,2cm}} \\
-	Supervisor: \underline{Leonildo José Oliveira da Silva\hspace{0,2cm}} \\
+	Superintendente: \underline{Leonildo José Oliveira da Silva\hspace{0,2cm}} \\
 	Nº de registro: \underline{\hspace{0,2cm}} \\
 	
 	\vspace{0.5cm}
 	\noindent \textbf{Período do Estágio} \\
-	Início: \underline{\hspace{0,2cm}} \quad Término:\underline{\hspace{0,2cm}} \\
-	Jornada de trabalho: \underline{30\hspace{0,2cm}} horas semanais \\
-	Total de horas: \underline{\hspace{0,2cm}} horas em \underline{\hspace{0,2cm}} \\
+	Início: \underline{24/01/2024\hspace{0,0cm}} \quad Término: \underline{23/09/2025\hspace{0,0cm}} \\
+	Jornada de trabalho: \underline{30\hspace{0.0cm}} horas semanais \\
+	Total de horas:\underline{2610\hspace{0,0cm}} horas em  \underline{2610\hspace{0,0cm}} \\
 	
 	\vfill
 	\begin{flushright}
@@ -79,7 +79,7 @@
 	% 1. introduçao
 	\section{Introdução}
 	
-	\hspace*{1,5cm}  O estágio é realizado na Secretaria de Estado do Turismo - SETUR/AL, localizada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada no interior do Centro Cultural e de Exposições Ruth Cardoso. A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de turismo do estado e chefe de cabinete. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
+	\hspace*{1.5cm}O estágio é realizado na Secretaria de Estado do Turismo - SETUR/AL, localizada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada no interior do Centro Cultural e de Exposições Ruth Cardoso. A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de turismo do estado e chefe de cabinete. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
 	
 	A organização do espaço físico da Secretaria de Estado do Turismo de Alagoas - SETUR/AL, de acordo com o organograma, é dividida em três áreas: órgão colegiado, gestão finalística e gestão estratégica. Sendo assim, dentro da gestão estratégica, destaca-se a SAPOFC, que está subordinado à secretaria Executiva de Gestão Interna.
 	A equipe da Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC é composta por diversos profissionais, incluindo superintendente administrativo e financeiro; gerente executivo administrativo; assessores técnicos de aquisição, frota, patrimônio, almoxarifado e controle de consumo interno; gerente executivo orçamento, finanças e contabilidade; supervisora de planejamento; assessores técnicos de planejamento e orçamento; além de gerentes e assessores técnicos de tecnologia da informação. 
@@ -93,7 +93,7 @@
 	% 2. atividades desenvolvidas
 	\section{Atividades Desenvolvidas}
 	
-	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetamos o orçamento para o ano de 2026 e, assim, digitamos a proposta de receitas e despesas para as unidades orçamentárias 29032 e 29533, respectivamente.
+	\hspace*{1.5cm}As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetamos o orçamento para o ano de 2026 e, assim, digitamos a proposta de receitas e despesas para as unidades orçamentárias 29032 e 29533, respectivamente.
 	
 	Por outro lado, além das reuniões de acompanhamento para discutir o progresso das atividades e identificar os instrumentos adotados para acompanhamento e avaliação, também foram realizados feedbacks regulares pelo superintendente sobre o desempenho e a 
 	qualidade dos relatórios desenvolvidos. Em relação a orientação dada pelo superintendente, foram fornecidas instruções detalhadas sobre o uso do SIAFE/AL, 
@@ -101,17 +101,24 @@
 	
 	Portanto, os procedimentos desenvolvidos como prática de estágio incluem: coleta e análise dos dados financeiros por meio do SIAFE/AL, para obter insights através da elaboração de painéis; utilização do Sistema Eletrônico de Informações (SEI), quando necessário, para buscar confirmações de Notas de Empenho (NE’s), Notas de Liquidação (NL’s) e Ordens Bancárias (OB’s) em alguns processos, a fim de embasar os argumentos feitos no acompanhamento das ações.  
 
-	
+		
 	% 3. Suporte Teórico para a Solução de Problemas
 	\section{Suporte Teórico para a Solução de Problemas}
-	\hspace*{1,5cm}
+	\hspace*{1.5cm}A bibliografia utilizada foi essencial para o desenvolvimento do estágio. Dessa forma, o Decreto nº 98.054, 4 de julho de 2024, Dispõe sobre o Monitoramento e Avaliação do Plano Plurianual (PPA) - MAPPA e a Politica Estadual de Monitoramento e avaliação de Políticas Públicas de Alagoas - PEMAPP. Diário Oficial do Estado de Alagoas, AL, n.2353. O Decreto nº 95.161, de 16 de janeiro de 2024, dispõe sobre a Execução Orçamentária, Financeira, Patrimonial e Contábil do Estado de Alagoas. Nesse sentido, esse decreto foi fundamental para entender o processo de execução. Nele, foi possível encontrar, no capítulo II, a classificação dos instrumentos para registro orçamentário, contábil, financeiro, patrimonial e de controle dos atos. A portaria nº 163, de 4 de maio de 2001, dispõe sobre normas gerais de consolidação das contas públicas no âmbito da União, Estados, Distrito Federal e Municípios, sendo necessária para entender a classificação e estrutura da despesa, segundo a sua natureza. Ela define uma classificação das despesas por categorias econômicas, por grupo de natureza, por modalidade de aplicação e por elemento de despesa, cujo uso estabelece uma mesma classificação orçamentária única para receitas e despesas públicas, segundo sua natureza. Além disso, a portaria esclarece como é a estrutura da natureza da despesa a ser observada na execução orçamentária
+	
+	Para o monitoramento do Plano Plurianual, foi utilizado o manual de julho de 2024, disponibilizado pela Gerência de Gestão e Monitoramento do PPA, que trouxe orientações para a inclusão de ações no módulo de acompanhamento do SIAFE/AL. Assim, foi possível monitorar as ações do PPA no SIAFE/AL.
 	
 	% 4. conclusão
 	\section{Conclusão}
 	\hspace*{1,5cm} 
+	O ambiente de trabalho na Secretaria de Estado do Turismo - SETUR/AL, além de ser amigável e agradável, proporciona não apenas aprendizado técnico, mas também oportunidades de aprimorar e desenvolver relacionamento profissionais. Dessa forma, a interação com os colegas de profissão está sendo satisfatória e enriquecedora. Além disso, é notável a colaboração conjunta, recíproca e coletiva pelos membros da equipe do setor SAPOFC. Em relação à conexão entre o estágio prático e os conhecimentos teóricos adquiridos, a SETUR/AL proporcionou várias oportunidade de aplicar os conhecimentos obtidos em sala de aula, especialmente nas disciplinas quantitativas e  Economia do Setor Público. 
 	
-	% 5. anexos
-	\section{Anexos}
+	As atividades desenvolvidas, como a coleta de dados financeiros pelo Sistema Integrado de Administração Financeira do Estado de Alagoas - SIAFE/AL e a análise deles para a construção de relatórios de acompanhamento da despesa da secretaria, estão diretamente alinhadas com os conceitos estudados nas disciplinas de Matemática e Estatística. Por exemplo, a construção de indicadores por meio da estatística descritiva, que inclui métodos gráficos como gráficos de coluna, barras, linha e histograma de frequência, foi fundamental para compreender a evolução das principais despesas. 
+	
+	Portanto, o estágio foi satisfatório, não apenas pelo aprendizado técnico que adquiri, mas também pelo ambiente de trabalho e pela oportunidade de estabelecer conexões com os colegas de profissão. Essa experiência foi fundamental para a minha formação e contribuiu de maneira significativa para a minha carreira profissional.
+
+	
+
 	
 	\newpage
 	% 6. de acordo
